# s3-bench

./: Dockerfile  pyproject.toml  requirements.txt  script.py
